"Overflow fix"

--- a/css/port_projects.css
+++ b/css/port_projects.css
@@ -6,6 +6,7 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     height: 100%;
+    overflow-y: auto;
 }
 
 #logo {
@@ -31,7 +32,7 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 70px;
+    margin-top: 60px;
 }
 
 .slides {
@@ -43,7 +44,7 @@ main {
     scroll-snap-points-x: repeat(300px);
     scroll-snap-type: mandatory;
     overflow-y: hidden;
-    margin-top: -10px;
+    margin-top: -5px;
 }
 
 .slides::-webkit-scrollbar {
